<resources>
	<string name="app_name" translatable="false">Codoma</string>
	<string name="action_settings">Settings</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="file_info_detail" translatable="false">%s \t\t %s</string>
	<string name="dialog_confirm_overwrite">Another file with the same name already exists. Replace existing file?</string>
	<string name="dialog_prompt_save">Save changes to file?</string>
	<string name="dialog_file_save_success">File saved</string>
	<string name="dialog_find_no_results">No results found</string>
	<string name="dialog_replace_all_result">Replacements:\u0020</string>
	<string name="dialog_replace_no_selection">No selected text to replace</string>
	<string name="dialog_go_to_line" translatable="false">@string/menu_go_to_line</string>
	<string name="dialog_go_to_line_text_hint">Line number</string>
	<string name="dialog_recent_files" translatable="false">@string/menu_recent_files</string>
	<string name="dialog_recent_files_none">There are no recent files.</string>
	<string name="dialog_statistics">Properties</string>
	<string name="dialog_statistics_words">Words</string>
	<string name="dialog_statistics_chars">Characters</string>
	<string name="dialog_statistics_no_whitespace">Characters (excluding spaces)</string>
	<string name="dialog_statistics_rows">Lines (without word wrap)</string>
	<string name="dialog_statistics_format">Original encoding</string>
	<string name="dialog_statistics_line_terminator_style">Original line terminator style</string>
	<string name="dialog_about">About Codoma</string>
	<string name="dialog_button_discard">Discard</string>
	<string name="dialog_button_overwrite">Replace</string>
	<string name="dialog_button_go_back">Go back</string>
	<string name="dialog_button_save" translatable="false">@string/action_save</string>
	<string name="dialog_button_save_different_name">Save as another file</string>
	<string name="dialog_error_file_open">Error opening file:\u0020</string>
	<string name="dialog_error_file_save">Error saving file:\u0020</string>
	<string name="dialog_error_not_a_file">Chosen name already refers to a directory. Please enter a different name.</string>
	<string name="dialog_error_attempt_overwrite_read_only">Selected file is read-only</string>
	<string name="dialog_error_attempt_overwrite_recovery">File is in a system directory. Saving disabled.</string>
	<string name="dialog_error_no_file_name">File name cannot be empty.</string>
	<string name="dialog_error_file_write_denied">Not allowed to save in the selected directory.</string>
	<string name="dialog_sorry">We\'re sorry.</string>
	<string name="dialog_sorry_force_resume">Close was forced to close
		by the Android system to conserve resources.</string>
	<string name="dialog_sorry_backup_disabled">Unfortunately, any unsaved
		changes were lost. Please consider turning on auto-backup in future.</string>
	<string name="dialog_sorry_missing_recovery">A backup was made but it can\'t
		be accessed. Either the backup disk is not available, or the backup was
		deleted by another program.\u000A
		\u000ATry checking \"%1$s\" as soon as possible. Refer to \"Help \u2192
		Backup and Data Recovery\" for more information.</string>
	<string name="dialog_sorry_read_error">A backup might be found at %1$s,
		depending if a SD card was available for writing.\u000A
		\u000APlease make a copy of the backup (if present) as soon as possible.
		Refer to \"Help \u2192 Backup and Data Recovery\" for more information.</string>
	<string name="dialog_sorry_write_error">A backup could not be saved to
		either the device storage or SD card. Unfortunately, unsaved changes were lost.\u000A
		\u000AIn future, please ensure that there is sufficient storage space in
		the device or SD card. Refer to \"Help \u2192 Backup and Data Recovery\"
		for more information.</string>
	<string name="progress_dialog_find">Searching&#8230;</string>
	<string name="progress_dialog_replace">Replacing&#8230;</string>
	<string name="progress_dialog_analyze">Analyzing&#8230;</string>
	<string name="progress_dialog_open">Opening&#8230;</string>
	<string name="progress_dialog_save">Saving&#8230;</string>
	<string name="progress_dialog_message">Please wait&#8230;</string>
	<string name="file_picker_inform_empty">This folder is empty.</string>
	<string name="file_picker_title_pick_file">Select a file to open</string>
	<string name="file_picker_title_enter_filename">Enter a file name to save</string>
	<string name="file_picker_label_save" translatable="false">@string/action_save</string>
	<string name="file_picker_file_not_found">%s (not available)</string>
	<string name="find_panel_find_label">Find</string>
	<string name="find_panel_replace_label">Replace</string>
	<string name="find_panel_options">Find Options</string>
	<string name="find_panel_case_sensitive">Case-sensitive</string>
	<string name="find_panel_match_whole_word">Whole word</string>
	<string name="help_title">Codoma Help</string>
	<string name="menu_about">About</string>
	<string name="menu_change_input_method">Change input method</string>
	<string name="menu_find_panel_toggle">Find/Replace</string>
	<string name="menu_go_to_line">Go to line&#8230;</string>
	<string name="menu_go_to_page">Go to page&#8230;</string>
	<string name="menu_help">Help</string>
	<string name="menu_new">New</string>
	<string name="menu_open">Open</string>
	<string name="menu_open_as">Open as…</string>
	<string name="menu_recent_files">Recent</string>
	<string name="action_save">Save</string>
	<string name="action_save_as">Save as…</string>
	<string name="menu_select_all">Select all</string>
	<string name="menu_statistics">Word count and properties</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_undo">Undo</string>
	<string name="menu_redo">Redo</string>
	<string name="action_close">Close</string>
	<string name="dialog_edit_name_title_file">Name for file</string>
	<string name="dialog_edit_name_title_folder">Name for folder</string>
	<string name="dialog_edit_name_title_rename">New name</string>
	<string name="settings_title">Codoma Settings</string>
	<string name="settings_group_view">View</string>
	<string name="settings_group_navigation">Navigation</string>
	<string name="settings_group_formatting">Formatting</string>
	<string name="settings_group_editing">Editing</string>
	<string name="settings_group_io">Opening and Saving</string>
	<string name="settings_group_text_selection">Text Selection</string>
	<string name="settings_label_auto_backup">Auto-backup</string>
	<string name="settings_desc_auto_backup">Allows recovery of unsaved files but slows performance</string>
	<string name="settings_label_auto_close_clipboard">Auto-close clipboard</string>
	<string name="settings_desc_auto_close_clipboard">Hide clipboard options when selection cancelled</string>
	<string name="settings_label_auto_display_keyboard">Auto-display keyboard</string>
	<string name="settings_desc_auto_display_keyboard">Show virtual keyboard when screen is tapped</string>
	<string name="settings_label_auto_indent">Auto-indent</string>
	<string name="settings_desc_auto_indent">Start a new line with the same level of indent as the previous line</string>
	<string name="settings_label_auto_open_clipboard">Auto-open clipboard</string>
	<string name="settings_desc_auto_open_clipboard">Display clipboard options when selection made</string>
	<string name="settings_label_color_scheme">Color scheme</string>
	<string name="settings_desc_color_scheme">Color schemes</string>
	<string name="settings_label_drag_select">Drag select</string>
	<string name="settings_desc_drag_select">Select text when cursor is dragged</string>
	<string name="settings_label_file_input_format">File input encoding</string>
	<string name="settings_desc_file_input_format">Default encoding for opening files</string>
	<string name="settings_label_file_output_format">File output encoding</string>
	<string name="settings_desc_file_output_format">Default encoding for saving files</string>
	<string name="settings_label_font">Font</string>
	<string name="settings_desc_font">Font for text editor</string>
	<string name="settings_label_highlight_current_row">Underline current row</string>
	<string name="settings_label_line_terminator_style">Line terminator style</string>
	<string name="settings_desc_line_terminator_style">Style of line terminators</string>
	<string name="settings_label_long_press_capitalize">Long-press caps</string>
	<string name="settings_desc_long_press_capitalize">Capitalize a letter by long-pressing its key on the hardware keyboard</string>
	<string name="settings_label_navigation_method">Cursor navigation</string>
	<string name="settings_desc_navigation_method">Ways to move the cursor. See the help file for more details.</string>
	<string name="settings_label_show_nonprinting">Show non-printing symbols</string>
	<string name="settings_desc_show_nonprinting">Display spaces, tabs and end of lines as visible symbols</string>
	<string name="settings_desc_tab_spaces">Number of spaces a tab represents</string>
	<string name="settings_label_word_wrap">Word wrap</string>
	<string name="settings_desc_word_wrap">Continues text on the next line if it is too long</string>
	<string name="settings_label_zoom_size">Zoom \u0025</string>
	<string name="settings_desc_zoom_size">Text size</string>
	<string name="settings_chirality_default" translatable="false">Right</string>
	<string name="settings_color_scheme_default" translatable="false">@string/settings_color_scheme_light</string>
	<string name="settings_file_input_format_default" translatable="false">auto</string>
	<string name="settings_file_output_format_default" translatable="false">auto</string>
	<string name="settings_view_font_default" translatable="false">monospace</string>
	<string name="settings_line_terminator_style_default" translatable="false">auto</string>
	<string name="settings_navigation_method_default" translatable="false">@string/settings_navigation_method_trackpad</string>
	<string name="settings_syntax_color_default" translatable="false">@string/settings_syntax_none</string>
	<string name="settings_tab_spaces_default" translatable="false">4</string>
	<string name="settings_zoom_size_default" translatable="false">100</string>
	<string name="settings_common_option_auto_label">Auto</string>
	<string name="button_cut">Cut</string>
	<string name="button_copy">Copy</string>
	<string name="button_paste">Paste</string>
	<string name="clipboardpanel_open">Open panel</string>
	<string name="action_select">Select</string>
	<string name="action_search">Search</string>
	<string name="action_set_as_working_folder">Set as working folder</string>
	<string name="action_is_working_folder">Is working folder</string>
	<string name="action_create_file">Create file</string>
	<string name="action_create_folder">Create folder</string>
	<string name="file">File</string>
	<string name="folder">Folder</string>
	<string name="home">Home</string>
	<string name="rename">Rename</string>
	<string name="hint_name">Enter name</string>
	<string name="is_the_working_folder">Is the working folder</string>
	<string name="enable_autoencoding">Enable autoencoding</string>
	<string name="text_to_find">Text to find</string>
	<string name="regular_expression">Regular expression</string>
	<string name="match_case">Match case</string>
	<string name="replace">Replace</string>
	<string name="text_to_replace">Text to replace</string>
	<string name="file_saved_with_success">file %s saved with success</string>
	<string name="err_occurred">Error occurred</string>
	<string name="file_cant_read">Can\'t read file</string>
	<string name="save_changes">Do you want to save the changes to the file %s?</string>
	<string-array
		name="settings_entries_chirality">
		<item>Right-handed</item>
		<item>Left-handed</item>
	</string-array>
</resources>