<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:activity=".MainActivity">

	<item
		android:id="@+id/recent_files"
		android:icon="@android:drawable/ic_menu_recent_history"
		android:title="@string/menu_recent_files"/>
	<item
		android:id="@+id/action_open"
		android:icon="@drawable/ic_action_file_folder_open"
		android:title="@string/menu_open"/>
	<item
		android:id="@+id/action_save"
		android:icon="@drawable/ic_action_content_save"
		android:title="@string/action_save"/>
	<item
		android:id="@+id/find_panel_toggle"
		android:icon="@android:drawable/ic_menu_search"
		android:title="@string/menu_find_panel_toggle"/>
	<item
		android:id="@+id/undo"
		android:icon="@android:drawable/ic_menu_revert"
		android:title="@string/menu_undo"/>
	<!-- End of icon menu -->

	<item
		android:id="@+id/redo"
		android:title="@string/menu_redo"/>
	<item
		android:id="@+id/new_file"
		android:title="@string/menu_new"/>
	<item
		android:id="@+id/action_save_as"
		android:title="@string/action_save_as"/>
	<group android:id="@+id/menu_group_selection_actions">
		<item
			android:id="@+id/cut"
			android:title="@android:string/cut"/>
		<item
			android:id="@+id/copy"
			android:title="@android:string/copy"/>
	</group>
	<item
		android:id="@+id/paste"
		android:title="@android:string/paste"/>
	<item
		android:id="@+id/select_all"
		android:title="@string/menu_select_all"/>
	<item
		android:id="@+id/go_to_line"
		android:title="@string/menu_go_to_line"/>
	<item
		android:id="@+id/statistics"
		android:title="@string/menu_statistics"/>
	<item
		android:id="@+id/settings"
		android:title="@string/menu_settings"/>
	<!--android:icon="@android:drawable/ic_menu_preferences" -->
	<item
		android:id="@+id/change_input_method"
		android:title="@string/menu_change_input_method"/>
	<item
		android:id="@+id/help"
		android:title="@string/menu_help"/>
	<item
		android:id="@+id/about"
		android:title="@string/menu_about"/>

</menu>
