<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:orientation="vertical"
	android:padding="10dp">

	<EditText
		android:id="@+id/text_to_find"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:hint="@string/text_to_find"
		android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
		android:padding="5dp"
		android:textSize="12sp"/>

	<CheckBox
		android:id="@+id/regex_check"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:layout_weight="1"
		android:singleLine="true"
		android:text="@string/regular_expression"
		android:textAllCaps="true"
		android:textSize="12sp"/>

	<CheckBox
		android:id="@+id/match_case_check"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:layout_weight="1"
		android:singleLine="true"
		android:text="@string/match_case"
		android:textAllCaps="true"
		android:textSize="12sp"/>

	<CheckBox
		android:id="@+id/replace_check"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:layout_weight="1"
		android:singleLine="true"
		android:text="@string/replace"
		android:textAllCaps="true"
		android:textSize="12sp"/>

	<EditText
		android:id="@+id/text_to_replace"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:hint="@string/text_to_replace"
		android:inputType="textNoSuggestions|textFilter"
		android:padding="5dp"
		android:textSize="12sp"
		android:visibility="gone"/>
</LinearLayout>
