<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	android:id="@+id/main_content"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:fab="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".SelectFileActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<android.support.design.widget.AppBarLayout
			android:id="@+id/appbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/appbar_padding_top"
			android:theme="@style/AppTheme.AppBarOverlay">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="?attr/colorPrimary"
				app:layout_scrollFlags="scroll|enterAlways"
				app:popupTheme="@style/AppTheme.PopupOverlay">
			</android.support.v7.widget.Toolbar>

			<HorizontalScrollView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<LinearLayout
					android:id="@+id/view_breadcrumbs"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					style="@style/Base.Widget.AppCompat.ButtonBar">
				</LinearLayout>
			</HorizontalScrollView>

		</android.support.design.widget.AppBarLayout>

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<android.support.v7.widget.RecyclerView
				android:id="@android:id/list"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginEnd="@dimen/list_horizontal_margin"
				android:layout_marginLeft="@dimen/list_horizontal_margin"
				android:layout_marginRight="@dimen/list_horizontal_margin"
				android:layout_marginStart="@dimen/list_horizontal_margin"
				android:scrollbars="vertical"
				app:layoutManager="LinearLayoutManager"
				tools:listitem="@layout/item_two_lines_icon"/>

			<TextView
				android:id="@+id/empty_text"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center"
				android:text="@string/file_picker_inform_empty"
				android:textAppearance="?android:attr/textAppearanceMedium"/>

		</FrameLayout>

	</LinearLayout>

	<com.github.clans.fab.FloatingActionMenu
		android:id="@+id/menu"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|right"
		android:layout_marginBottom="16dp"
		android:layout_marginRight="16dp"
		fab:menu_animationDelayPerItem="50"
		fab:menu_buttonSpacing="0dp"
		fab:menu_colorNormal="#DA4336"
		fab:menu_colorPressed="#E75043"
		fab:menu_colorRipple="#99FFFFFF"
		fab:menu_fab_size="normal"
		fab:menu_icon="@drawable/fab_add"
		fab:menu_labels_colorNormal="#333333"
		fab:menu_labels_colorPressed="#444444"
		fab:menu_labels_colorRipple="#66FFFFFF"
		fab:menu_labels_cornerRadius="3dp"
		fab:menu_labels_ellipsize="none"
		fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
		fab:menu_labels_margin="0dp"
		fab:menu_labels_maxLines="-1"
		fab:menu_labels_padding="8dp"
		fab:menu_labels_paddingBottom="4dp"
		fab:menu_labels_paddingLeft="8dp"
		fab:menu_labels_paddingRight="8dp"
		fab:menu_labels_paddingTop="4dp"
		fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
		fab:menu_labels_singleLine="false"
		fab:menu_labels_textColor="#FFFFFF"
		fab:menu_labels_textSize="14sp"
		fab:menu_shadowColor="#66000000"
		fab:menu_shadowRadius="4dp"
		fab:menu_shadowXOffset="1dp"
		fab:menu_shadowYOffset="3dp"
		fab:menu_showShadow="true">

		<com.github.clans.fab.FloatingActionButton
			android:id="@+id/menu_item_create_file"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_action_file"
			fab:fab_label="@string/action_create_file"
			fab:fab_size="mini"/>

		<com.github.clans.fab.FloatingActionButton
			android:id="@+id/menu_item_create_folder"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_action_folder"
			fab:fab_label="@string/action_create_folder"
			fab:fab_size="mini"/>

	</com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
